--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -1,135 +1,142 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <meta content="" name="description">
-    <meta content="Orest Stetsiak" name="author">
-    <link href="../static/images/favicon.png" rel="icon">
-    <title>Student details</title>
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
-    <link href="../static/css/jumbotron.css" rel="stylesheet">
-</head>
-<body>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>Сведения о студенте - pyBursa</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap theme -->
+    <link href="../static/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="../static/css/theme.css" rel="stylesheet">
+  </head>
+
+  <body role="document">
+
+    <!-- Fixed navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button aria-controls="navbar" aria-expanded="false" class=
-                "navbar-toggle collapsed" data-target="#navbar" data-toggle=
-                "collapse" type="button"><span class="sr-only">Toggle
-                navigation</span> <span class="icon-bar"></span> <span class=
-                "icon-bar"></span> <span class="icon-bar"></span></button>
-                <a class="navbar-brand" href="index.html">Main</a> <a class=
-                "navbar-brand" href="contact.html">Contacts</a> <a class=
-                "navbar-brand" href="student_list.html">Students</a>
-            </div>
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">
+            <img class="logo" src="../static/img/logo.png" />
+          </a>
         </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="contact.html">Контакты</a></li>
+            <li><a href="student_list.html">Студенты</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
     </nav>
-    <div class="jumbotron">
-        <div class="container">
-            <h2>Narendra Modi</h2>
-        </div>
-        <div class="container" role="main">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="container" role="main">
-                        <div class="table-responsive">
-                            <table class="table table-striped" width="10">
-                                <tbody>
-                                    <tr>
-                                        <td>Surname</td>
-                                        <td>Narendra</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Name</td>
-                                        <td>Modi</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Patronymic</td>
-                                        <td>Damodardas</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Rating</td>
-                                        <td>21</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Average Grade</td>
-                                        <td>100</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Birth Date</td>
-                                        <td>17/09/1950</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Address</td>
-                                        <td>2820 Church Street Atwater, CA
-                                        95301</td>
-                                    </tr>
-                                    <tr>
-                                        <td>E-mail</td>
-                                        <td>
-                                            <a href=
-                                            "mailto:narendra_modi@pybursa.com"
-                                            target=
-                                            "_top">narendra_modi@pybursa.com</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Skype</td>
-                                        <td>narendra_modi</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="container" role="main">
-                        <table class="table table-striped" width="10">
-                            <tbody>
-                                <tr>
-                                    <th>Week</th>
-                                    <th>Control type</th>
-                                    <th>Grade</th>
-                                </tr>
-                                <tr>
-                                    <td rowspan="3">week 1</td>
-                                    <td>Tests</td>
-                                    <td>100500%</td>
-                                </tr>
-                                <tr>
-                                    <td>Problem Task 1</td>
-                                    <td>100500%</td>
-                                </tr>
-                                <tr>
-                                    <td>Problem Task 2</td>
-                                    <td>100500%</td>
-                                </tr>
-                                <tr>
-                                    <td rowspan="3">week 2</td>
-                                    <td>Tests</td>
-                                    <td>100500%</td>
-                                </tr>
-                                <tr>
-                                    <td>Problem Task 1</td>
-                                    <td>100500%</td>
-                                </tr>
-                                <tr>
-                                    <td>Problem Task 2</td>
-                                    <td>100500%</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+
+    <div class="container theme-showcase" role="main">
+
+      <div class="page-header">
+        <h2>Петров Петр Петрович</h2>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12 col-lg-12">
+          <div class="row">
+            <div class="col-xs-3 col-lg-3">
+              <img src="../static/img/student.jpg" />
             </div>
+            <div class="col-xs-4 col-lg-4 ">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <td>дата рождения</td>
+                    <td>07.12.1997</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>адрес</td>
+                    <td>Харьков ул.Петровского 12</td>
+                  </tr>
+                  <tr>
+                    <td>почта</td>
+                    <td>pety@gmail.com</td>
+                  </tr>
+                  <tr>
+                    <td>логин skype</td>
+                    <td>pety.pety</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
-    </div>
-    <script src=
-    "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
-    </script> 
-    <script src="../static/js/bootstrap.js">
-    </script>
-</body>
+      </div>
+
+      <div class="page-header">
+        <h3>Результаты обучения</h3>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th>ЛР 1</th>
+                <th>ЛР 2</th>
+                <th>ЛР 3</th>
+                <th>ЛР 4</th>
+                <th>ЛР 5</th>
+                <th>ЛР 6</th>
+                <th>КР 1</th>
+                <th>КР 2</th>
+                <th>КР 3</th>
+                <th>КР 4</th>
+                <th>средний бал</th>
+                <th>рейтинг</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>10</td>
+                <td>9</td>
+                <td>10</td>
+                <td>6</td>
+                <td>7</td>
+                <td>5</td>
+                <td>9</td>
+                <td>10</td>
+                <td>10</td>
+                <td>8</td>
+                <td>8.4</td>
+                <td>3</td>
+              </tr>
+
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div> <!-- /container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
+  </body>
 </html>
