--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -25,20 +26,20 @@
     </ul>
 
     <h1>Director</h1>
-        <p>Name</p>
-        <p>Skype</p>
-        <p>Email</p>
-        <p>Phone</p>
+    <p>Name</p>
+    <p>Skype</p>
+    <p>Email</p>
+    <p>Phone</p>
     <h1>Manager</h1>
-        <p>Name</p>
-        <p>Skype</p>
-        <p>Email</p>
-        <p>Phone</p>
+    <p>Name</p>
+    <p>Skype</p>
+    <p>Email</p>
+    <p>Phone</p>
     <h1>Founder</h1>
-        <p>Name</p>
-        <p>Skype</p>
-        <p>Email</p>
-        <p>Phone</p>
+    <p>Name</p>
+    <p>Skype</p>
+    <p>Email</p>
+    <p>Phone</p>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
