--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     </ul>
     <div>
       <h1>Description</h1>
-      <p><strong>PyBursa</strong></p>
+      <h2>PyBursa</h2>
     </div>
     <h2>Program</h2>
 
