Modify index & contact & style

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,10 +20,40 @@
   </head>
   <body>
 
-    <ul class="nav nav-pills">
-      <li role="presentation"><a href="index.html">Main</a></li>
-      <li role="presentation" class="active"><a href="contact.html">Contacts</a></li>
-    </ul>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="index.html">PyBursa04</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="index.html">Main</a></li>
+        <li class="active"><a href="contact.html">Contacts</a></li>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+    
+    <ul>
+       <li id='v11'>Textytext11</li>
+       <li id='v12'>Textytext12</li>
+       <li id='v13'>Textytext13</li>
+       <li id='v14'>Textytext14</li>
+       <li id='v15'>Textytext15</li>
+       <li id='v16'>Textytext16</li>
+       <li id='v17'>Textytext17</li>
+       <li id='v18'>Textytext18</li>
+       <li id='v19'>Textytext19</li>
+       <li id='v20'>Textytext20</li>
+     </ul>
 
     <h1>Director</h1>
     <p>Name</p>
