--- a/templates/index.html
+++ b/templates/index.html
@@ -20,15 +20,45 @@
   </head>
   <body>
 
-    <ul class="nav nav-pills">
-      <li role="presentation" class="active"><a href="index.html">Main</a></li>
-      <li role="presentation"><a href="contact.html">Contacts</a></li>
-    </ul>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="index.html">PyBursa04</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="index.html">Main</a></li>
+        <li><a href="contact.html">Contacts</a></li>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
     <div>
       <h1>Description</h1>
-      <h2>PyBursa</h2>
+      <h3>PyBursa</h3>
     </div>
     <h2>Program</h2>
+      <ul>
+        <li id='v1'>Textytext1</li>
+        <li id='v2'>Textytext2</li>
+        <li id='v3'>Textytext3</li>
+        <li id='v4'>Textytext4</li>
+        <li id='v5'>Textytext5</li>
+        <li id='v6'>Textytext6</li>
+        <li id='v7'>Textytext7</li>
+        <li id='v8'>Textytext8</li>
+        <li id='v9'>Textytext9</li>
+        <li id='v10'>Textytext10</li>
+      </ul>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
