Modify index & contact

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -41,6 +41,13 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+<span class="label label-default"> </span>
+<span class="label label-primary"> </span>
+<span class="label label-success"> </span>
+<span class="label label-info"> </span>
+<span class="label label-warning"> </span>
+<span class="label label-danger"> </span>
     
     <ul>
        <li id='v11'>Textytext11</li>
