--- a/templates/index.html
+++ b/templates/index.html
@@ -42,11 +42,19 @@
   </div><!-- /.container-fluid -->
 </nav>
 
+<span class="label label-default"> </span>
+<span class="label label-primary"> </span>
+<span class="label label-success"> </span>
+<span class="label label-info"> </span>
+<span class="label label-warning"> </span>
+<span class="label label-danger"> </span>
+
     <div>
       <h1>Description</h1>
       <h3>PyBursa</h3>
     </div>
     <h2>Program</h2>
+
       <ul>
         <li id='v1'>Textytext1</li>
         <li id='v2'>Textytext2</li>
