Modify index & contact

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,6 +20,20 @@
   </head>
   <body>
 
+<div class="container">
+  <div class="page-header">
+    <h1>PYTHON<small>web</small></h1>
+  </div>
+</div>
+
+<div class="container">
+    <ol class="breadcrumb">
+        <li class="active">Main</li>
+        <li>Contacts</li>
+    </ol>
+</div>
+
+<div class="container">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -37,31 +51,14 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="index.html">Main</a></li>
-        <li class="active"><a href="contact.html">Contacts</a></li>
+        <li><a href="contact.html">Contacts</a></li>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
-<span class="label label-default"> </span>
-<span class="label label-primary"> </span>
-<span class="label label-success"> </span>
-<span class="label label-info"> </span>
-<span class="label label-warning"> </span>
-<span class="label label-danger"> </span>
-    
-    <ul>
-       <li id='v11'>Textytext11</li>
-       <li id='v12'>Textytext12</li>
-       <li id='v13'>Textytext13</li>
-       <li id='v14'>Textytext14</li>
-       <li id='v15'>Textytext15</li>
-       <li id='v16'>Textytext16</li>
-       <li id='v17'>Textytext17</li>
-       <li id='v18'>Textytext18</li>
-       <li id='v19'>Textytext19</li>
-       <li id='v20'>Textytext20</li>
-     </ul>
+</div>
 
+<div class="container">
     <h1>Director</h1>
     <p>Name</p>
     <p>Skype</p>
@@ -77,6 +74,19 @@
     <p>Skype</p>
     <p>Email</p>
     <p>Phone</p>
+    <ul>
+       <li id='v11'>Textytext11</li>
+       <li id='v12'>Textytext12</li>
+       <li id='v13'>Textytext13</li>
+       <li id='v14'>Textytext14</li>
+       <li id='v15'>Textytext15</li>
+       <li id='v16'>Textytext16</li>
+       <li id='v17'>Textytext17</li>
+       <li id='v18'>Textytext18</li>
+       <li id='v19'>Textytext19</li>
+       <li id='v20'>Textytext20</li>
+     </ul>
+</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
