--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,20 @@
   </head>
   <body>
 
+<div class="container">
+  <div class="page-header">
+    <h1>PYTHON<small>web</small></h1>
+  </div>
+</div>
+
+<div class="container">
+    <ol class="breadcrumb">
+        <li>Main</li>
+        <li class="active">Contacts</li>
+    </ol>
+</div>
+
+<div class="container">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -36,37 +50,31 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Main</a></li>
+        <li><a href="index.html">Main</a></li>
         <li><a href="contact.html">Contacts</a></li>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+</div>
 
-<span class="label label-default"> </span>
-<span class="label label-primary"> </span>
-<span class="label label-success"> </span>
-<span class="label label-info"> </span>
-<span class="label label-warning"> </span>
-<span class="label label-danger"> </span>
+<div class="container">
+    <h1>Description</h1>
+    <h2>PyBursa</h2>
+    <h3>Program</h3>
 
-    <div>
-      <h1>Description</h1>
-      <h3>PyBursa</h3>
-    </div>
-    <h2>Program</h2>
-
-      <ul>
-        <li id='v1'>Textytext1</li>
-        <li id='v2'>Textytext2</li>
-        <li id='v3'>Textytext3</li>
-        <li id='v4'>Textytext4</li>
-        <li id='v5'>Textytext5</li>
-        <li id='v6'>Textytext6</li>
-        <li id='v7'>Textytext7</li>
-        <li id='v8'>Textytext8</li>
-        <li id='v9'>Textytext9</li>
-        <li id='v10'>Textytext10</li>
-      </ul>
+    <ul>
+      <li id='v1'>lecture1</li>
+      <li id='v2'>lecture2</li>
+      <li id='v3'>lecture3</li>
+      <li id='v4'>lecture4</li>
+      <li id='v5'>lecture5</li>
+      <li id='v6'>lecture6</li>
+      <li id='v7'>lecture7</li>
+      <li id='v8'>lecture8</li>
+      <li id='v9'>lecture9</li>
+      <li id='v10'>lecture10</li>
+    </ul>
+</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
