--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
 </div>
 
 <div class="container">
-    <h1>Python/Django</h1>
+    <h1><b>Description</b></h1>
     <p>About Django...</p>
     <h2>PyBursa</h2>
     <h3>Program</h3>
