--- a/templates/index.html
+++ b/templates/index.html
@@ -58,9 +58,11 @@
 </div>
 
 <div class="container">
-    <h1>Description lecture course</h1>
+  <div>
+    <h1>Description</h1>
     <p>About Django...</p>
     <h2>PyBursa</h2>
+  </div>
     <h3>Program</h3>
 
     <ul>
