Added new style

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -46,57 +46,40 @@
 
     <div class="container">
       <div class="jumbotron">
-
         <div class="media">
-          <div class="media-left media-middle">
-            <a href="#">
-              <img class="media-object" src="../static/images/aleksej_radchenko.jpg" alt="...">
-            </a>
-          </div>
           <div class="media-body">
-            <h2 class="media-heading">Об учителе</h2>
-            <h4 class="media-text">
-            B web-разработке с 2006 года, специализируется на python и django с 2007.
-            Имеет трехлетний опыт преподавательской деятельности на кафедре “Компьютерного моделирования
-            и информационных технологий” при ХНТУСА, опыт обучения и менторства начинающих web-разработчиков
-            на реальных проектах, вел другие частные курсы.
-            Алексей работал python разработчиком в ряде компаний, реализовал более
-            10-ти проектов, принимал участие в разработке более 20-ти проектов. Участвовал как слушатель
-            и докладчик во многих тематических конференциях, благодаря всему этому собрал набор “лучших практик”,
-            которые применяются абсолютно всеми компаниями, использующими python.
-            За последние 2-3 года участвовал в разработке SPA проектов, проектов,
-            рассчитанных на большую нагрузку, проектов, имеющих сложную инфраструктуру и интеграции
-            со множеством сторонних сервисов.
-            </h4>
             <div class="row">
               <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                  <img class="size-img" src="../static/images/skype.jpeg" alt="Skype">
+                  <h3 class="title">Founder</h3>
                   <div class="caption">
-                    <h3>Thumbnail label</h3>
-                    <p>...</p>
+                    <img class="size-img" src="../static/images/pavel_obod.png" alt="Pavel Obod">
+                    <p>Name: Pavel Obod</p>
+                    <p>Email: itbursa100@gmail.com</p>
+                    <p>Skype: azaless</p>
+                    <p>Phone: +38 (096) 469-15-56</p>
                     <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
                   </div>
                 </div>
-              </div>
-
-              <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                  <img class="size-img" src="../static/images/mail.png" alt="Mail">
+                  <h3 class="title">Director</h3>
                   <div class="caption">
-                    <h3>Thumbnail label</h3>
-                    <p>...</p>
+                    <img class="size-img" src="../static/images/aleksej_radchenko.png" alt="Aleksej Radchenko">
+                    <p>Name: Aleksej Radchenko</p>
+                    <p>Email: dixon-che@gmail.com</p>
+                    <p>Skype: dixon.che</p>
+                    <p>Phone: +38 (096) 469-15-58</p>
                     <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
                   </div>
                 </div>
-              </div>
-
-              <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                  <img class="size-img" src="..." alt="...">
+                  <h3 class="title">Manager</h3>
                   <div class="caption">
-                    <h3>Thumbnail label</h3>
-                    <p>...</p>
+                    <img class="size-img" src="../static/images/daria_mykhalevych.png" alt="Daria Mykhalevych">
+                    <p>Name: Daria Mykhalevych</p>
+                    <p>Email: daria.mykhalevych@gmail.com</p>
+                    <p>Skype: darka.darka.darka.darka.</p>
+                    <p>Phone: +38 (096) 469-15-57</p>
                     <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
                   </div>
                 </div>
@@ -105,47 +88,7 @@
           </div>
         </div>
       </div>
-
-      <div class="jumbotron">
-        <div class="media">
-          <div class="media-left media-middle">
-            <a href="#">
-              <img class="media-object" src="../static/images/nikolay_borovenskiy.png" alt="...">
-            </a>
-          </div>
-          <div class="media-body">
-            <h3 class="media-heading">Coach</h3>
-
-            B web-разработке с 2006 года, специализируется на python и django с 2007.
-            Имеет трехлетний опыт преподавательской деятельности на кафедре “Компьютерного моделирования
-            и информационных технологий” при ХНТУСА, опыт обучения и менторства начинающих web-разработчиков
-            на реальных проектах, вел другие частные курсы.
-
-          </div>
-        </div>
-      </div>
-
-      <div class="jumbotron">
-        <div class="media">
-          <div class="media-left media-middle">
-            <a href="#">
-              <img class="media-object" src="../static/images/elena_lagunkova.png" alt="...">
-            </a>
-          </div>
-          <div class="media-body">
-            <h3 class="media-heading">Об учителе</h3>
-
-            B web-разработке с 2006 года, специализируется на python и django с 2007.
-            Имеет трехлетний опыт преподавательской деятельности на кафедре “Компьютерного моделирования
-            и информационных технологий” при ХНТУСА, опыт обучения и менторства начинающих web-разработчиков
-            на реальных проектах, вел другие частные курсы.
-
-
-          </div>
-        </div>
-      </div>
     </div>
-
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
