--- a/templates/index.html
+++ b/templates/index.html
@@ -44,13 +44,17 @@
       </div><!-- /.container-fluid -->
     </nav>
 
+    <div class="row-header">
+      <h2>PyBursa</h2>
+    </div>
+
     <div class="container">
       <div class="jumbotron">
-        <h2 class="media-heading">Профессиональные курсы PyBursa</h2>
+        <h2 class="media-heading">Description</h2>
         <h4 class="media-text">
           Если ты стремишься получить профессию, которая позволит путешествовать, воплощать невероятные
           идеи в жизнь, получать достойную заработную плату и работать в комфортном офисе - добро
-          пожаловать в веб-разработку.
+          пожаловать в PyBursa.
         </h4>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
       </div>
