--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,7 @@
+.row-header
+{
+    text-align: center;
+}
 .media-object
 {
     border: 10px;
@@ -12,14 +16,23 @@
 .media-text
 {
     text-align: justify
+
 }
 .size-img
 {
-    width: 80px;
+    width: 150px;
+    text-align: center;
     /*height: 100px;*/
 }
 .jambotron
 {
     text-align: center;
 }
-
+.title
+{
+    text-align: center;
+}
+.caption
+{
+    font-size: small;
+}
