Added formated btn

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -47,45 +47,52 @@
     <div class="container">
       <div class="jumbotron">
         <div class="media">
-          <div class="media-body">
             <div class="row">
               <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                   <h3 class="title">Founder</h3>
                   <div class="caption">
-                    <img class="size-img" src="../static/images/pavel_obod.png" alt="Pavel Obod">
-                    <p>Name: Pavel Obod</p>
-                    <p>Email: itbursa100@gmail.com</p>
-                    <p>Skype: azaless</p>
-                    <p>Phone: +38 (096) 469-15-56</p>
-                    <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                    <div class="img-center">
+                      <img class="size-img" src="../static/images/pavel_obod.png" alt="Pavel Obod">
+                    </div>
+                    <div class="thumbnail-text">
+                      <p>Name: Pavel Obod</p>
+                      <p>Email: itbursa100@gmail.com</p>
+                      <p>Skype: azaless</p>
+                      <p>Phone: +38 (096) 469-15-56</p>
+                    </div>
                   </div>
                 </div>
                 <div class="thumbnail">
                   <h3 class="title">Director</h3>
                   <div class="caption">
-                    <img class="size-img" src="../static/images/aleksej_radchenko.png" alt="Aleksej Radchenko">
-                    <p>Name: Aleksej Radchenko</p>
-                    <p>Email: dixon-che@gmail.com</p>
-                    <p>Skype: dixon.che</p>
-                    <p>Phone: +38 (096) 469-15-58</p>
-                    <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                    <div class="img-center">
+                      <img class="size-img" src="../static/images/aleksej_radchenko.png" alt="Aleksej Radchenko">
+                    </div>
+                    <div class="thumbnail-text">
+                      <p>Name: Aleksej Radchenko</p>
+                      <p>Email: dixon-che@gmail.com</p>
+                      <p>Skype: dixon.che</p>
+                      <p>Phone: +38 (096) 469-15-58</p>
+                    </div>
                   </div>
                 </div>
                 <div class="thumbnail">
                   <h3 class="title">Manager</h3>
                   <div class="caption">
-                    <img class="size-img" src="../static/images/daria_mykhalevych.png" alt="Daria Mykhalevych">
-                    <p>Name: Daria Mykhalevych</p>
-                    <p>Email: daria.mykhalevych@gmail.com</p>
-                    <p>Skype: darka.darka.darka.darka.</p>
-                    <p>Phone: +38 (096) 469-15-57</p>
-                    <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                    <div class="img-center">
+                      <img class="size-img" src="../static/images/daria_mykhalevych.png" alt="Daria Mykhalevych">
+                    </div>
+                    <div class="thumbnail-text">
+                      <p>Name: Daria Mykhalevych</p>
+                      <p>Email: daria.mykhalevych@gmail.com</p>
+                      <p>Skype: darka.darka.darka.darka.</p>
+                      <p>Phone: +38 (096) 469-15-57</p>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
         </div>
       </div>
     </div>
