--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,9 @@
           идеи в жизнь, получать достойную заработную плату и работать в комфортном офисе - добро
           пожаловать в PyBursa.
         </h4>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+        <div class="btn-center">
+          <p><a class="btn btn-primary btn-lg" href="http://www.itbursa.com/pybursa.com" target="_blank" role="button">Learn more</a></p>
+        </div>
       </div>
     </div>
 
@@ -64,11 +66,14 @@
       <div class="jumbotron">
         <h2 class="media-heading">Program</h2>
           <h4 class="media-text">
-          Если ты стремишься получить профессию, которая позволит путешествовать, воплощать невероятные
-          идеи в жизнь, получать достойную заработную плату и работать в комфортном офисе - добро
-          пожаловать в веб-разработку.
-        </h4>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+            <p>...</p>
+            <p>...</p>
+            <p>...</p>
+            <p>...</p>
+          </h4>
+        <div class="btn-center">
+          <p><a class="btn btn-primary btn-lg" href="http://www.itbursa.com/pybursa.com" target="_blank" role="button">Learn more</a></p>
+        </div>
       </div>
     </div>
 
