--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,10 @@
 {
     text-align: center;
 }
+.btn
+{
+    text-align: center;
+}
 .media-object
 {
     border: 10px;
@@ -20,7 +24,7 @@
 }
 .size-img
 {
-    width: 150px;
+    width: 200px;
     text-align: center;
     /*height: 100px;*/
 }
@@ -35,4 +39,16 @@
 .caption
 {
     font-size: small;
+}
+.btn-center
+{
+    text-align: center;
+}
+.img-center
+{
+    text-align: center;
+}
+.thumbnail-text
+{
+    text-align: center;
 }
