--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,6 +12,8 @@
 
     <title>Carousel Template for Bootstrap</title>
 
+    <link href="../static/css/style.css" rel="stylesheet">
+
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
