--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     
     <nav class="navbar navbar-default">
       <ul class="nav navbar-nav">   
-        <li class="active"><a href="#">Main <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="index.html">Main <span class="sr-only">(current)</span></a></li>
         <li><a href="contact.html">Contacts</a></li>
       </ul>
     </nav>
@@ -41,7 +41,7 @@
   
     
   <div class="jumbotron">
-    <h2>Program</h2>
+    <h2 data-toggle="tooltip" data-placement="bottom" title="Техники максимального дзена">Program</h2>
     <p>В нашем курсе вы можете овладеть следующими техниками и узнать такие полезные вещи, как:</p>
     <ul>
       <li>Разведение кактусов в условиях крайнего севера.</li>
@@ -82,7 +82,7 @@
       <li class="next"><a href="contact.html">Next <span aria-hidden="true">&rarr;</span></a></li>
     </ul>
   </nav>
-  
+   
   </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
