--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-default">
       <ul class="nav navbar-nav">
         <li><a href="index.html">Main</a></li>   
-        <li class="active"><a href="#">Contacts<span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
         
       </ul>
     </nav>
@@ -82,7 +82,7 @@
   </div>
   
   <div class='company'>
-  <h2>Состав компании</h2>
+  <h2 data-toggle="tooltip" data-placement="bottom" title="Состав">Состав компании</h2>
     <ul class="list-group">
       <li class="list-group-item">
         <span class="badge">22</span>
